fix some more confscan and rmsd bugs
Signed-off-by: Conrad Hübler <Conrad.Huebler@gmx.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -271,13 +271,12 @@ if(USE_D3)
 endif()
 
 if(USE_D4)
-    if(NOT DEFINED LIBS_DIR AND NOT DEFINED INCLUDE_DIR)
+    if(NOT DEFINED D4LIBS_DIR AND NOT DEFINED D4INCLUDE_DIR)
   	find_package(LAPACKE REQUIRED)
 	find_package(CBLAS CONFIG REQUIRED)
-    endif(NOT DEFINED LIBS_DIR AND NOT DEFINED INCLUDE_DIR)
-    if(DEFINED LIBS_DIR AND DEFINED INCLUDE_DIR)
+    else()
 	include_directories(${INCLUDE_DIR})
-    endif(DEFINED LIBS_DIR AND DEFINED INCLUDE_DIR)
+    endif(NOT DEFINED D4LIBS_DIR AND NOT DEFINED D4INCLUDE_DIR)
 
     add_subdirectory(external/cpp-d4)
     if(HELPERS)
@@ -289,23 +288,23 @@ if(USE_D4)
     else()
         set_property(TARGET dftd4_helper PROPERTY CXX_STANDARD 14)
     endif(C17)
-    if(DEFINED LIBS_DIR AND DEFINED INCLUDE_DIR)
+    if(DEFINED D4LIBS_DIR AND DEFINED D4INCLUDE_DIR)
     	link_directories(${LIBS_DIR})
         target_link_libraries(dftd4_helper PRIVATE libcpp_d4 cblas lapacke pthread)
     else()
     target_link_libraries(dftd4_helper PRIVATE libcpp_d4 ${LAPACKE_LIBRARIES}  ${CBLAS_LIBRARIES} pthread)
-    endif(DEFINED LIBS_DIR AND DEFINED INCLUDE_DIR)
+    endif(DEFINED D4LIBS_DIR AND DEFINED D4INCLUDE_DIR)
     endif()
 
     set(curcuma_d4_SRC
         src/core/dftd4interface.cpp
     )
     add_library(curcuma_d4  ${curcuma_d4_SRC})
-    if(DEFINED LIBS_DIR AND DEFINED INCLUDE_DIR)
+    if(DEFINED D4LIBS_DIR AND DEFINED D4INCLUDE_DIR)
 	    target_link_libraries(curcuma_d4 PUBLIC libcpp_d4 cblas lapacke )
     else()
 	    target_link_libraries(curcuma_d4 PUBLIC libcpp_d4 ${LAPACKE_LIBRARIES}  ${CBLAS_LIBRARIES} )
-    endif(DEFINED LIBS_DIR AND DEFINED INCLUDE_DIR)
+    endif(DEFINED D4LIBS_DIR AND DEFINED D4INCLUDE_DIR)
     target_link_libraries(curcuma_core curcuma_d4)
 endif()
 
