--- a/test_cases/CMakeLists.txt
+++ b/test_cases/CMakeLists.txt
@@ -5,6 +5,11 @@ file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/input_aa.xyz
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/input_ab.xyz
       DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/AAA-bGal/A.xyz
+        DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/AAA-bGal/B.xyz
+            DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
+
 add_executable(rmsd_test
         rmsd/main.cpp)
 
@@ -13,4 +18,12 @@ target_link_libraries(rmsd_test curcuma_core)
 add_executable(reorder_test
         reorder/main.cpp)
 
+    add_executable(AAAbGal
+            AAAbGal.cpp)
+target_link_libraries(AAAbGal curcuma_core)
 target_link_libraries(reorder_test curcuma_core)
+
+
+
+#target_link_libraries(curcuma_tests curcuma_core)￼
+
