--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,6 +153,7 @@ set(curcuma_core_SRC
         src/core/energycalculator.cpp
         src/core/molecule.cpp
         src/core/pseudoff.cpp
+        #src/core/eigen_uff.cpp
         src/core/uff.cpp
         src/tools/formats.h
         src/tools/geometry.h
