more hessian stuff
Signed-off-by: conradhuebler <Conrad.Huebler@gmx.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,15 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
 #    set(CMAKE_BUILD_TYPE RelWithDebInfo)
 #endif()
 
+#include(FetchContent)
+#FetchContent_Declare(
+#    finite-diff
+#    GIT_REPOSITORY https://github.com/zfergus/finite-diff.git
+#    GIT_TAG "v1.0.1"
+#    GIT_SHALLOW TRUE
+#)
+#FetchContent_MakeAvailable(finite-diff)
+
 include_directories(SYSTEM  ${PROJECT_SOURCE_DIR}/external/fmt/include
                             ${PROJECT_SOURCE_DIR}/external/LBFGSpp/include
                             ${PROJECT_SOURCE_DIR}/external/ripser
@@ -313,8 +322,7 @@ if(USE_D4)
     endif(DEFINED D4LIBS_DIR AND DEFINED D4INCLUDE_DIR)
     target_link_libraries(curcuma_core curcuma_d4)
 endif()
-
-target_link_libraries(curcuma_core pthread fmt::fmt-header-only)
+ target_link_libraries(curcuma_core pthread fmt::fmt-header-only )
 
 if(WIN32) # Check if we are on Windows
 else()
