reimplement extra UFF
Signed-off-by: Conrad Hübler <Conrad.Huebler@gmx.net>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,6 +176,7 @@ set(curcuma_core_SRC
 
     add_executable(curcuma
             src/main.cpp
+            src/core/forcefieldgenerator.h src/core/forcefieldgenerator.cpp
 
             )
 
