--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v2
+        uses: actions/create-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
         with:
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@v1
       with:
         submodules: true
     - uses: awalsh128/cache-apt-pkgs-action@latest
@@ -47,7 +47,7 @@ jobs:
 
     - name: Upload Release Asset
       id: upload-release-asset-20-04
-      uses: actions/upload-release-asset@v1
+      uses: actions/upload-release-asset@v4
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
@@ -55,3 +55,25 @@ jobs:
         asset_path: ./package/curcuma-nightly-x86_64.AppImage
         asset_name: curcuma-nightly-${{ needs.makerelease.outputs.version }}-20_04-x86_64-Linux.AppImage
         asset_content_type: application/zip
+
+  windows:
+    needs: [makerelease]
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v1
+        with:
+          submodules: true
+
+      - name: Set up MinGW
+        uses: e-t-l/setup-mingw@patch-1
+        with:
+            platform: x64
+
+      - name: Update Modules and Build
+        run: scripts/build_windows.bat
+        
+
+
+      
+
