--- a/src/global_config.h.in
+++ b/src/global_config.h.in
@@ -7,5 +7,8 @@
 #cmakedefine USE_Plumed
 #cmakedefine WriteMoreInfo
 
+#cmakedefine USE_BLAS
+#cmakedefine USE_MKL
+
 #cmakedefine C17
 #cmakedefine GCC
